2020-04-09  Christophe Lyon  <christophe.lyon@linaro.org>

	* lib/scanasm.exp (check-function-bodies): Use non-greedy regexp
	when extracting the target selector.

2020-04-09  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/94482
	* gcc.dg/torture/pr94482.c: New test.
	* gcc.dg/tree-ssa/pr94482-2.c: Likewise.

2020-04-09  Marek Polacek  <polacek@redhat.com>

	PR c++/93790
	* g++.dg/cpp2a/paren-init23.C: New test.
	* g++.dg/init/aggr14.C: New test.

2020-04-09  Jan Hubicka  <hubicka@ucw.cz>

	PR tree-optimization/91322
	* g++.dg/lto/alias-4_0.C: Fix typo.
	* g++.dg/lto/alias-4_0.C: Avoid conflict with va_list on ARM and add
	a template testing that

2020-04-09  Richard Sandiford  <richard.sandiford@arm.com>

	* lib/scanasm.exp (check-function-bodies): Treat the third
	parameter as a list of option regexps and require each regexp
	to match.  Check for cases in which a target/xfail selector
	was mistakenly passed to the options argument.
	* gcc.target/aarch64/sve/pcs/args_1.c: Add an empty options list
	to the invocation of check-function-bodies.
	* gcc.target/aarch64/sve/pcs/args_2.c: Likewise.
	* gcc.target/aarch64/sve/pcs/args_3.c: Likewise.
	* gcc.target/aarch64/sve/pcs/args_4.c: Likewise.
	* gcc.target/aarch64/sve/pcs/return_1.c: Likewise.
	* gcc.target/aarch64/sve/pcs/return_1_1024.c: Likewise.
	* gcc.target/aarch64/sve/pcs/return_1_128.c: Likewise.
	* gcc.target/aarch64/sve/pcs/return_1_2048.c: Likewise.
	* gcc.target/aarch64/sve/pcs/return_1_256.c: Likewise.
	* gcc.target/aarch64/sve/pcs/return_1_512.c: Likewise.
	* gcc.target/aarch64/sve/pcs/return_2.c: Likewise.
	* gcc.target/aarch64/sve/pcs/return_3.c: Likewise.
	* gcc.target/aarch64/sve/pcs/return_4.c: Likewise.
	* gcc.target/aarch64/sve/pcs/return_4_1024.c: Likewise.
	* gcc.target/aarch64/sve/pcs/return_4_128.c: Likewise.
	* gcc.target/aarch64/sve/pcs/return_4_2048.c: Likewise.
	* gcc.target/aarch64/sve/pcs/return_4_256.c: Likewise.
	* gcc.target/aarch64/sve/pcs/return_4_512.c: Likewise.